--- a/Pixel/src/views/index.html
+++ b/Pixel/src/views/index.html
@@ -174,10 +174,10 @@
             <div class="redes">
 
                 <div>
-                    <h3>¡Seguinos en nuestras redes sociales!</h3>
+                    <h3 class="texto-redes">¡Seguinos en nuestras redes sociales!</h3>
                 </div>
                 <div class="iconos">
-                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fab fa-whatsapp"></i>
                     <i class="fab fa-instagram"></i>
                     <i class="fab fa-twitter"></i>
                 </div>
@@ -207,7 +207,10 @@
                 </ul>
             </div>
 
-        </div>
+            <div class="copyright">
+                <p>Copyright © 2022 Pixel! E-commerce.</p>
+
+            </div>
 
         </div>
 
