--- a/Pixel/src/views/login.html
+++ b/Pixel/src/views/login.html
@@ -19,7 +19,10 @@
 <body>
     <header>
         <div class="main-header-top-bar">
-            <img class="logo" src="/img/logo-pixel-final.png" alt="logo">
+            <!-- <a href="./" class="logo"> Pixel!</a> LOGO ALTERNATIVO-->
+            <a href="./" class="logo1"> <img src="/img/pixel-logo.png" alt="logo"></a>
+            <!-- logo-mobile -->
+            <a href="./" class="logo2"> <img src="/img/logo-pixel-mobile.png" alt="logo"></a>
             <form action='https://www.google.com/search?q=' method="get" class="search-bar">
                 <input type="text" placeholder="Monitores, teclados, tarjetas de video" name="q">
                 <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
@@ -66,7 +69,6 @@
             </a>
         </nav>
 
-    </header>
     <main>
         <!-- ingresa -->
         <form action="/login" method="post" class="form-login">
