--- a/Pixel/src/views/login.html
+++ b/Pixel/src/views/login.html
@@ -83,7 +83,7 @@
                         style="color: #000;">LOGIN</button></a>
             </div>
             <p></p>
-            <div class="redes">
+            <div class="social">
                 <h5 class="google" style="padding-bottom: 32px">Ingresar con Google
                     <i class="fab fa-google"></i>
                 </h5>
@@ -105,7 +105,7 @@
             <div class="redes">
 
                 <div>
-                    <h3>¡Seguinos en nuestras redes sociales!</h3>
+                    <h3 class="texto-redes">¡Seguinos en nuestras redes sociales!</h3>
                 </div>
                 <div class="iconos">
                     <i class="fab fa-whatsapp"></i>
@@ -138,7 +138,10 @@
                 </ul>
             </div>
 
-        </div>
+            <div class="copyright">
+                <p>Copyright © 2022 Pixel! E-commerce.</p>
+
+            </div>
 
         </div>
 
