--- a/Pixel/public/css/login.css
+++ b/Pixel/public/css/login.css
@@ -123,7 +123,7 @@ body {
     display: flex;
     justify-content: space-around;
     display: none;
-    box-shadow: 1rem 1rem 3rem 1rem  #7EFF00;
+    box-shadow: 2px 2px 2rem 15px  #7EFF00;
     background-color: #000;
     border-top: solid 1px #cac7ff;
 }
@@ -210,7 +210,7 @@ body {
     border-radius: 5px;
 }
 
-.redes {
+.social {
     padding-top: 30px;
 
 }
@@ -330,10 +330,10 @@ footer {
     box-shadow: 3px 3px 30px 5px  #7EFF00;
 }
 
-footer div h3 {
+.texto-redes  {
     color: #fff;
-    padding: 34px;
-    font-size: 15px;
+    padding: 15px;
+    font-size: 18px;
     text-align: center;
 }
 
@@ -361,16 +361,16 @@ footer div h3 {
 
 .informacion {
     display: flex;
+    flex-direction: column;
     height: 100%;
-    margin: auto;
-    max-width: 900px;
-    justify-content: space-between;
+    text-align: center;
 }
 
 .informacion ul li {
-    font-size: 10px;
+    font-size: 16px;
     color: #7EFF00;
     list-style-type: none;
+    justify-content: center;
 }
 
 .informacion ul li:hover {
@@ -382,9 +382,9 @@ footer div h3 {
     padding-left: 20px;
 }
 
-.lista1 h4 {
-    color: #fff;
-    font-size: 12px;
+.lista1 h4{
+    color: #667;
+    font-size: 20px;
     padding-bottom: 8px;
 }
 
@@ -392,9 +392,9 @@ footer div h3 {
     padding: 15px;
 }
 
-.lista2 h4 {
-    color: #fff;
-    font-size: 12px;
+.lista2 h4{
+    color: #667;
+    font-size: 20px;
     padding-bottom: 8px;
 }
 
@@ -402,13 +402,17 @@ footer div h3 {
     padding: 15px;
 }
 
-.lista3 h4 {
-    color: #fff;
-    font-size: 12px;
-    padding-bottom: 8px;
+.lista3 h4{
+    color: #667;
+    font-size: 20px;
+    padding-bottom: 10px;
 }
 
-
+.copyright{
+    color: #666666;
+    font-size: 14px;
+    padding-top: 10px;
+}
 @media (min-width:320px) {
 
 
@@ -535,6 +539,39 @@ footer div h3 {
 }
 
 @media (min-width: 767px) {
+
+     /* FOOTER */
+     .informacion {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+    }
+
+    .redes{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        border-bottom: 1px solid #4A4A4A;
+      }
+
+      .texto-redes{
+        padding: 20px;
+      }
+
+    .lista1 {
+        padding: 15px;
+        padding-left: 5px;
+    }
+
+    
+    .lista3 {
+        padding-right: 5px;
+    }
+
+    
+
     .logo2 img {
         display: none;
         height: 100px;
