--- a/Pixel/src/views/index.html
+++ b/Pixel/src/views/index.html
@@ -14,6 +14,7 @@
 <body>
     <header>
         <div class="main-header-top-bar">
+            <div class="top-header">
             <!-- <a href="./" class="logo"> Pixel!</a> LOGO ALTERNATIVO-->
             <a href="./" class="logo1"> <img src="/img/pixel-logo.png" alt="logo"></a>
             <!-- logo-mobile -->
@@ -21,6 +22,7 @@
             <form action='https://www.google.com/search?q=' method="get" class="search-bar">
                 <input type="text" placeholder="Monitores, teclados, tarjetas de video" name="q">
                 <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </div>
             </form>
             <div class="icons-top-bar">
                 <a href="/login"><i class="fa-regular fa-user"></i> Ingresar</a>
