--- a/Pixel/src/views/register.html
+++ b/Pixel/src/views/register.html
@@ -19,13 +19,13 @@
     <header>
         <div class="main-header-top-bar">
             <div class="top-header">
-            <!-- <a href="./" class="logo"> Pixel!</a> LOGO ALTERNATIVO-->
-            <a href="./" class="logo1"> <img src="/img/pixel-logo.png" alt="logo"></a>
-            <!-- logo-mobile -->
-            <a href="./" class="logo2"> <img src="/img/logo-pixel-mobile.png" alt="logo"></a>
-            <form action='https://www.google.com/search?q=' method="get" class="search-bar">
-                <input type="text" placeholder="Monitores, teclados, tarjetas de video" name="q">
-                <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <!-- <a href="./" class="logo"> Pixel!</a> LOGO ALTERNATIVO-->
+                <a href="./" class="logo1"> <img src="/img/pixel-logo.png" alt="logo"></a>
+                <!-- logo-mobile -->
+                <a href="./" class="logo2"> <img src="/img/logo-pixel-mobile.png" alt="logo"></a>
+                <form action='https://www.google.com/search?q=' method="get" class="search-bar">
+                    <input type="text" placeholder="Monitores, teclados, tarjetas de video" name="q">
+                    <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
             </form>
             <div class="icons-top-bar">
@@ -92,7 +92,7 @@
                 <div class="registrate">
                     <h2>¡Registrate!</h2>
                 </div>
-                
+
                 <div>
                     <input type="text" name="nombre-apellido" placeholder="Nombre y apellido" id="nombre-apellido"
                         required>
@@ -117,34 +117,35 @@
 
                 <div>
                     <h4 class="aclaracion">Foto de usuario</h4>
-                <div class="file-select">
-                <input type="file" name="foto-user" accept=".png, .jpg">
-                </div>
+                    <div class="file-select">
+                        <input type="file" name="foto-user" accept=".png, .jpg">
+                    </div>
 
-                <div class="contraseña">
-                    <input class="password" type="password" name="password" placeholder="Contraseña" required>
-                </div>
+                    <div class="contraseña">
+                        <input class="password" type="password" name="password" placeholder="Contraseña" required>
+                    </div>
 
-                <div class="contraseña">
-                    <input class="password" type="password" name="re-password" placeholder="Confirmar contraseña" required>
-                </div>
+                    <div class="contraseña">
+                        <input class="password" type="password" name="re-password" placeholder="Confirmar contraseña"
+                            required>
+                    </div>
 
-                <div>
-                    <button class="enviar" type="submit">Enviar</button>
-                </div>
-                <div class="borrar-datos">
-                    <button class="borrar" type="reset">Borrar datos</button>
-                </div>
+                    <div>
+                        <button class="enviar" type="submit">Enviar</button>
+                    </div>
+                    <div class="borrar-datos">
+                        <button class="borrar" type="reset">Borrar datos</button>
+                    </div>
 
-                <div class="ingreso">
-                    <h5 class="google">Ingresar con Google
-                        <i class="fab fa-google"></i>
-                    </h5>
-                    <h5 class="facebook">Ingresar con Facebook
-                        <i class="fab fa-facebook-square"></i>
-                    </h5>
+                    <div class="ingreso">
+                        <h5 class="google">Ingresar con Google
+                            <i class="fab fa-google"></i>
+                        </h5>
+                        <h5 class="facebook">Ingresar con Facebook
+                            <i class="fab fa-facebook-square"></i>
+                        </h5>
+                    </div>
                 </div>
-            </div>
 
         </form>
 
