--- a/Pixel/public/css/index.css
+++ b/Pixel/public/css/index.css
@@ -27,9 +27,14 @@ body {
 } */
 
 
-.logo2 img {
+.top-header {
     display: flex;
-    height: 100px;
+    width: 90vw;
+}
+
+.logo2 img {
+    height: 70px;
+    margin-right: 40px;
 }
 
 .logo1 {
@@ -46,7 +51,7 @@ body {
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 60px;
     padding: 10px 10px;
-    margin: auto
+    margin: auto;
 }
 
 .search-bar input {
@@ -76,6 +81,7 @@ body {
     background-color: rgba(128, 255, 0, 0.7);
     cursor: pointer;
 }
+
 
 .main-header-top-bar {
     background-color: rgb(0, 0, 0);
@@ -155,10 +161,14 @@ body {
 
 /* BURGUER MENU */
 .burger-menu {
-    text-align: center;
     font-size: 1.5em;
-    border-bottom: solid 1px #cac7ff;
-    background: linear-gradient(black 55%, rgba(128, 255, 0, 0.70))
+    border-bottom: solid 1px #61a120;
+    background-color: #000;
+    padding-top: 10px;
+    box-shadow: 0rem 0.2rem 2rem 0.2rem #7EFF00;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .burger-menu i {
@@ -167,7 +177,7 @@ body {
     border: solid 1px #7EFF00;
     padding: 10px;
     color: #7EFF00;
-    margin-bottom: 15px
+    margin-bottom: 15px;
 }
 
 /* BANNER SLIDER */
@@ -180,64 +190,62 @@ body {
     display: none
 }
 
-.banner{
-    position:relative
+.banner {
+    position: relative
 }
 
-#left{
-    color:#7EFF00;
-    width:50px;
+#left {
+    color: #7EFF00;
+    width: 50px;
     height: 50px;
     border-radius: 50%;
     background-color: rgba(74, 74, 74, 0.6);
     text-align: center;
     font-size: 50px;
     position: absolute;
-    top:40%;
-    left:0;
+    top: 40%;
+    left: 0;
     z-index: 1;
-    opacity:0.6;
-    display:none
+    opacity: 0.6;
+    display: none
 }
 
 
-#right{
-    color:#7EFF00;
-    width:50px;
+#right {
+    color: #7EFF00;
+    width: 50px;
     height: 50px;
     border-radius: 50%;
     background-color: rgba(74, 74, 74, 0.6);
     text-align: center;
     font-size: 50px;
     position: absolute;
-    top:40%;
-    right:0;
+    top: 40%;
+    right: 0;
     z-index: 1;
-    opacity:0.6;
-    display:none
+    opacity: 0.6;
+    display: none
 }
 
 .dots {
-    display:flex;
+    display: flex;
     flex-direction: row;
-    color:#7EFF00;
+    color: #7EFF00;
     font-size: 12px;
-    padding:3px;
-    width:100px;
+    padding: 3px;
+    width: 100px;
     height: 30px;
     background-color: rgba(74, 74, 74, 0.6);
     justify-content: space-evenly;
     align-items: center;
     border-radius: 30px;
-    position:absolute;
-    top:90%;
-    left:50%;
+    position: absolute;
+    top: 90%;
+    left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
-    opacity:0.6;
-    display:none
-
-
+    opacity: 0.6;
+    display: none
 }
 
 
@@ -286,10 +294,10 @@ main {
 
 .price {
     font-size: 16px;
-    color:#7EFF00
+    color: #7EFF00
 }
 
-.discount{
+.discount {
     color: black;
     font-weight: bold;
 }
@@ -300,8 +308,8 @@ main {
     font-weight: bold;
 }
 
-.productInfo{
-    padding:5px
+.productInfo {
+    padding: 5px
 }
 
 /* WHATSAPP */
@@ -331,7 +339,7 @@ footer {
     background-color: #000;
 }
 
-.texto-redes  {
+.texto-redes {
     color: #fff;
     padding: 15px;
     font-size: 18px;
@@ -383,7 +391,7 @@ footer {
     padding-left: 20px;
 }
 
-.lista1 h4{
+.lista1 h4 {
     color: #667;
     font-size: 20px;
     padding-bottom: 8px;
@@ -393,7 +401,7 @@ footer {
     padding: 15px;
 }
 
-.lista2 h4{
+.lista2 h4 {
     color: #667;
     font-size: 20px;
     padding-bottom: 8px;
@@ -403,13 +411,13 @@ footer {
     padding: 15px;
 }
 
-.lista3 h4{
+.lista3 h4 {
     color: #667;
     font-size: 20px;
     padding-bottom: 10px;
 }
 
-.copyright{
+.copyright {
     color: #666666;
     font-size: 14px;
     padding-top: 10px;
@@ -462,7 +470,7 @@ footer {
         display: none;
         height: 100px;
     }
-    
+
     .logo1 {
         display: flex;
         height: 100px;
@@ -471,9 +479,6 @@ footer {
         margin-right: 5px;
     }
 
-    .nav-bar {
-        display: flex
-    }
 
 
     .main-header-top-bar {
@@ -495,7 +500,7 @@ footer {
     }
 
     .search-bar {
-        width: 30%;
+        width: 300px;
     }
 
     .icons-top-bar a {
@@ -504,13 +509,24 @@ footer {
         font-size: 14px;
     }
 
-    .banner img, #right, #left {
+    .burger-menu {
+        display: none;
+    }
+
+    .nav-bar {
+        display: flex
+    }
+
+    .banner img,
+    #right,
+    #left {
         display: initial
     }
 
-    .dots{
-        display:flex
+    .dots {
+        display: flex
     }
+
     .burger-menu {
         display: none;
     }
@@ -539,24 +555,24 @@ footer {
 
     }
 
-    .redes{
+    .redes {
         display: flex;
         justify-content: center;
         align-items: center;
 
         border-bottom: 1px solid #4A4A4A;
-      }
+    }
 
-      .texto-redes{
+    .texto-redes {
         padding: 20px;
-      }
+    }
 
     .lista1 {
         padding: 15px;
         padding-left: 5px;
     }
 
-    
+
     .lista3 {
         padding-right: 5px;
     }
@@ -565,13 +581,13 @@ footer {
 }
 
 @media (min-width: 1020px) {
-    
+
     .search-bar {
         width: 700px;
         max-width: 700px;
     }
 
-    .search-bar input::placeholder{
+    .search-bar input::placeholder {
         font-size: 16px;
     }
 
@@ -585,5 +601,5 @@ footer {
     .informacion {
         margin-left: 10px;
         margin-right: 10px;
-      }
+    }
 }
