--- a/Pixel/public/css/productCart.css
+++ b/Pixel/public/css/productCart.css
@@ -170,6 +170,7 @@ body {
  main {
     margin-left: auto;
     margin-right: auto;
+    padding: 20px;
     width: 90%
 }
 
@@ -200,6 +201,8 @@ img {
     background-color:#7EFF00 ;
     border-radius: 10px;
     padding: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     color: black;
     width: 35%;
     font-weight: 535;
