--- a/Pixel/public/css/index.css
+++ b/Pixel/public/css/index.css
@@ -27,15 +27,12 @@ body {
 } */
 
 
-.logo2 img {
-    display: flex;
-    height: 100px;
+.logo img{
+    display:flex;
+    height: 90px;
+    padding:15px
 }
 
-.logo1 {
-    display: none;
-    height: 100px;
-}
 
 .search-bar {
     display: flex;
@@ -432,12 +429,11 @@ footer div h3 {
 
     .logo2 img {
         display: none;
-        height: 100px;
     }
     
     .logo1 {
         display: flex;
-        height: 100px;
+        height: 100%;
     }
 
     .nav-bar {
