--- a/src/views/login.html
+++ b/src/views/login.html
@@ -71,31 +71,37 @@
             </a>
         </nav>
 
-    <main>
-        <!-- ingresa -->
-        <form action="/login" method="post" class="form-login">
-            <h5>Iniciar Sesión con mi mail</h5>
-            <input class="cajita" type="checkbox" name="" value=""> 
-            <input class="controls" type="text" style="color: rgb(255, 255, 255) ;" name="usuario" value="" placeholder="Usuario" required minlength="3" >
-            <input class="controls" type="password"  style="color: rgb(255, 255, 255);" name="contrasena" value="" placeholder="Contraseña" autocomplete="current-password" required minlength="3">
-            <a class="registrarme" ; padding: 6px;; href="/register"> Registrame</a>
-            <a class="contraseña"; href="#"> ¿Olvidastes tu Contraseña?</a>
-            <div class="button-container">
-                <a style="text-decoration: none;" href="/index"><button type="submit"
-                        style="color: #000;">LOGIN</button></a>
+        <main>
+            <!-- ingresa -->
+            <div class="mover">
+                <form action="/login" method="post" class="form-login">
+                    <h5>Iniciar Sesión con mi mail</h5>
+                    <!--<input class="cajita" type="checkbox" name="" value="">  -->
+                    <input class="controls" type="text" style="color: rgb(255, 255, 255) ;" name="usuario" value=""
+                        placeholder="Usuario" required minlength="3">
+                    <input class="controls" type="password" style="color: rgb(255, 255, 255);" name="contrasena"
+                        value="" placeholder="Contraseña" autocomplete="current-password" required minlength="3">
+                        <div class="texto-login">
+                    <a class="registrarme" ; padding: 6px;; href="/register"> Registrame</a>
+                    <a class="contraseña" ; href="#"> ¿Olvidastes tu Contraseña?</a>
+                </div>
+                    <div class="button-container">
+                        <a style="text-decoration: none;" href="/index"><button type="submit"
+                                style="color: #000;">LOGIN</button></a>
+                    </div>
+                    <p></p>
+                    <div class="social">
+                        <h5 class="google" style="padding-bottom: 32px">Ingresar con Google
+                            <i class="fab fa-google"></i>
+                        </h5>
+                        <h5 class="facebook" style="padding-bottom: 32px;">Ingresar con Facebook
+                            <i class="fab fa-facebook-square"></i>
+                        </h5>
+                    </div>
+                </form>
             </div>
-            <p></p>
-            <div class="social">
-                <h5 class="google" style="padding-bottom: 32px">Ingresar con Google
-                    <i class="fab fa-google"></i>
-                </h5>
-                <h5 class="facebook" style="padding-bottom: 32px;">Ingresar con Facebook
-                    <i class="fab fa-facebook-square"></i>
-                </h5>
-            </div>
-            </sección>
 
-    </main>
+        </main>
     </header>
     <div class="whatsapp">
         <a href="https://support.google.com/?hl=es"><i class="fa-brands fa-whatsapp"></i></a>
