--- a/public/css/index.css
+++ b/public/css/index.css
@@ -27,10 +27,19 @@ body {
 } */
 
 
-.logo img {
+.top-header {
     display: flex;
+    width: 90vw;
+}
+
+.logo2 img {
+    height: 70px;
+    margin-right: 40px;
+}
+
+.logo1 {
+    display: none;
     height: 100px;
-    padding-bottom: 15px
 }
 
 .search-bar {
@@ -42,7 +51,7 @@ body {
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 60px;
     padding: 10px 10px;
-    margin: auto
+    margin: auto;
 }
 
 .search-bar input {
@@ -75,6 +84,7 @@ body {
 
 
 .main-header-top-bar {
+    background-color: rgb(0, 0, 0);
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
@@ -97,7 +107,7 @@ body {
     display: flex;
     align-items: baseline;
     width: 100%;
-    justify-content: flex-end;
+    justify-content: center;
     padding: 15px;
 }
 
@@ -151,10 +161,14 @@ body {
 
 /* BURGUER MENU */
 .burger-menu {
-    text-align: center;
     font-size: 1.5em;
-    border-bottom: solid 1px #cac7ff;
-    background: linear-gradient(black 55%, rgba(128, 255, 0, 0.70))
+    border-bottom: solid 1px #61a120;
+    background-color: #000;
+    padding-top: 10px;
+    box-shadow: 0rem 0.2rem 2rem 0.2rem #7EFF00;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .burger-menu i {
@@ -163,7 +177,7 @@ body {
     border: solid 1px #7EFF00;
     padding: 10px;
     color: #7EFF00;
-    margin-bottom: 15px
+    margin-bottom: 15px;
 }
 
 /* BANNER SLIDER */
@@ -322,15 +336,13 @@ main {
 /* FOOTER */
 
 footer {
-    border-top: 1px solid #cac7ff;
     background-color: #000;
-    box-shadow: 0rem 0.6rem 3rem 0.3rem #7EFF00;
 }
 
-footer div h3 {
+.texto-redes {
     color: #fff;
     padding: 15px;
-    font-size: 15px;
+    font-size: 18px;
     text-align: center;
 }
 
@@ -358,16 +370,16 @@ footer div h3 {
 
 .informacion {
     display: flex;
+    flex-direction: column;
     height: 100%;
-    margin: auto;
-    max-width: 900px;
-    justify-content: space-between;
+    text-align: center;
 }
 
 .informacion ul li {
-    font-size: 10px;
+    font-size: 16px;
     color: #7EFF00;
     list-style-type: none;
+    justify-content: center;
 }
 
 .informacion ul li:hover {
@@ -380,8 +392,8 @@ footer div h3 {
 }
 
 .lista1 h4 {
-    color: #fff;
-    font-size: 12px;
+    color: #667;
+    font-size: 20px;
     padding-bottom: 8px;
 }
 
@@ -390,8 +402,8 @@ footer div h3 {
 }
 
 .lista2 h4 {
-    color: #fff;
-    font-size: 12px;
+    color: #667;
+    font-size: 20px;
     padding-bottom: 8px;
 }
 
@@ -400,9 +412,15 @@ footer div h3 {
 }
 
 .lista3 h4 {
-    color: #fff;
-    font-size: 12px;
-    padding-bottom: 8px;
+    color: #667;
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+.copyright {
+    color: #666666;
+    font-size: 14px;
+    padding-top: 10px;
 }
 
 
@@ -421,18 +439,44 @@ footer div h3 {
     }
 }
 
+/*FOOTER*/
+
+.aclaracion {
+    font-size: 18px;
+}
+
+.informacion {
+    justify-content: space-between;
+}
+
+.lista1 h4 {
+    padding-bottom: 10px;
+    font-size: 18px;
+}
+
+.lista2 h4 {
+    padding-bottom: 10px;
+    font-size: 18px;
+}
+
+.lista3 h4 {
+    padding-bottom: 10px;
+    font-size: 18px;
+}
+
 @media (min-width: 767px) {
-    .logo {
+
+    .logo2 img {
+        display: none;
+        height: 100px;
+    }
+
+    .logo1 {
         display: flex;
         height: 100px;
-        justify-content: flex-end;
-    }
-
-    .nav-bar {
-        display: flex;
         padding: 10px;
+        margin-bottom: 30px;
     }
-
 
     .main-header-top-bar {
         display: flex;
@@ -452,16 +496,20 @@ footer div h3 {
         justify-content: flex-end;
     }
 
-    .search-bar {
-        width: 30%;
-    }
-
 
 
     .icons-top-bar a {
         text-decoration: none;
         color: #7EFF00;
         font-size: 14px;
+    }
+
+    .burger-menu {
+        display: none;
+    }
+
+    .nav-bar {
+        display: flex
     }
 
     .banner img,
@@ -493,18 +541,59 @@ footer div h3 {
         width: 23%
     }
 
+    /*FOOTER*/
+
+    .informacion {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+    }
+
+    .redes {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        border-bottom: 1px solid #4A4A4A;
+    }
+
+    .texto-redes {
+        padding: 20px;
+    }
+
+    .lista1 {
+        padding: 15px;
+        padding-left: 5px;
+    }
+
+
+    .lista3 {
+        padding-right: 5px;
+    }
+
+
 }
 
 @media (min-width: 1020px) {
+
     .search-bar {
-
-        width: 45%;
-
         max-width: 700px;
+    }
+
+    .search-bar input::placeholder {
+        font-size: 16px;
     }
 
     .icons-top-bar {
 
         width: 30%;
+    }
+
+    /*FOOTER*/
+
+    .informacion {
+        margin-left: 10px;
+        margin-right: 10px;
     }
 }
