--- a/src/views/login.html
+++ b/src/views/login.html
@@ -72,7 +72,7 @@
         </nav>
 
         <main>
-            <!-- ingresa   ffff -->
+            <!-- ingresa -->
             <div class="mover">
                 <form action="/login" method="post" class="form-login">
                     <h5>Iniciar Sesión con mi mail</h5>
