--- a/src/views/index.html
+++ b/src/views/index.html
@@ -14,11 +14,15 @@
 <body>
     <header>
         <div class="main-header-top-bar">
+            <div class="top-header">
             <!-- <a href="./" class="logo"> Pixel!</a> LOGO ALTERNATIVO-->
-            <a href="./" class="logo"> <img src="/img/pixel-logo.png" alt="logo"></a>
+            <a href="./" class="logo1"> <img src="/img/pixel-logo.png" alt="logo"></a>
+            <!-- logo-mobile -->
+            <a href="./" class="logo2"> <img src="/img/logo-pixel-mobile.png" alt="logo"></a>
             <form action='https://www.google.com/search?q=' method="get" class="search-bar">
                 <input type="text" placeholder="Monitores, teclados, tarjetas de video" name="q">
                 <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </div>
             </form>
             <div class="icons-top-bar">
                 <a href="/login"><i class="fa-regular fa-user"></i> Ingresar</a>
@@ -172,10 +176,10 @@
             <div class="redes">
 
                 <div>
-                    <h3>¡Seguinos en nuestras redes sociales!</h3>
+                    <h3 class="texto-redes">¡Seguinos en nuestras redes sociales!</h3>
                 </div>
                 <div class="iconos">
-                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fab fa-whatsapp"></i>
                     <i class="fab fa-instagram"></i>
                     <i class="fab fa-twitter"></i>
                 </div>
@@ -205,7 +209,10 @@
                 </ul>
             </div>
 
-        </div>
+            <div class="copyright">
+                <p>Copyright © 2022 Pixel! E-commerce.</p>
+
+            </div>
 
         </div>
 
