--- a/public/css/register.css
+++ b/public/css/register.css
@@ -609,7 +609,7 @@ footer {
         box-shadow: 0rem 0.6rem 3rem 0.5rem #7EFF00;
     }
 
-    /*MAIN*/
+    /*MAIN* hola/
 
     main {
         box-shadow: unset;
