--- a/public/css/index.css
+++ b/public/css/index.css
@@ -162,10 +162,11 @@ body {
 /* BURGUER MENU */
 .burger-menu {
     font-size: 1.5em;
-    border-bottom: solid 1px #61a120;
+    border-top: solid 1px #cac7ff;
+    border-bottom: solid 1px #4c9800;
     background-color: #000;
     padding-top: 10px;
-    box-shadow: 0rem 0.2rem 2rem 0.2rem #7EFF00;
+    box-shadow: 0rem -0.3rem 2rem 0.2rem #7EFF00;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -337,16 +338,18 @@ main {
 
 footer {
     background-color: #000;
+    box-shadow: 3px 3px 30px 5px  #7EFF00;
 }
 
 .texto-redes {
     color: #fff;
     padding: 15px;
-    font-size: 18px;
+    font-size: 14px;
     text-align: center;
 }
 
 .redes {
+    border-top: 1px solid #cac7ff;
     border-bottom: 1px solid #4A4A4A;
     border-radius: 1px;
 }
@@ -376,7 +379,7 @@ footer {
 }
 
 .informacion ul li {
-    font-size: 16px;
+    font-size: 12px;
     color: #7EFF00;
     list-style-type: none;
     justify-content: center;
@@ -419,8 +422,9 @@ footer {
 
 .copyright {
     color: #666666;
-    font-size: 14px;
+    font-size: 12px;
     padding-top: 10px;
+    text-align: center;
 }
 
 
@@ -442,26 +446,22 @@ footer {
 /*FOOTER*/
 
 .aclaracion {
-    font-size: 18px;
-}
-
-.informacion {
-    justify-content: space-between;
+    font-size: 12px;
 }
 
 .lista1 h4 {
     padding-bottom: 10px;
-    font-size: 18px;
+    font-size: 14px;
 }
 
 .lista2 h4 {
     padding-bottom: 10px;
-    font-size: 18px;
+    font-size: 14px;
 }
 
 .lista3 h4 {
     padding-bottom: 10px;
-    font-size: 18px;
+    font-size: 14px;
 }
 
 @media (min-width: 767px) {
@@ -489,10 +489,14 @@ footer {
 
     }
 
+    .search-bar {
+        width: 50%;
+    }
+
     .icons-top-bar {
         display: flex;
         align-items: flex-end;
-        width: 45%;
+        width: 55%;
         justify-content: flex-end;
     }
 
@@ -546,7 +550,6 @@ footer {
     .informacion {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
 
     }
 
@@ -563,13 +566,15 @@ footer {
     }
 
     .lista1 {
-        padding: 15px;
-        padding-left: 5px;
+        flex:3.33
     }
 
+    .lista2{
+        flex:3.33
+    }
 
     .lista3 {
-        padding-right: 5px;
+        flex:3.33
     }
 
 
@@ -578,16 +583,17 @@ footer {
 @media (min-width: 1020px) {
 
     .search-bar {
+        width: 60%;
         max-width: 700px;
     }
 
     .search-bar input::placeholder {
-        font-size: 16px;
+        font-size: 14px;
     }
 
     .icons-top-bar {
 
-        width: 30%;
+        width: 40%;
     }
 
     /*FOOTER*/
