slider banner modificación

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -71,9 +71,9 @@
             <i class="fa-solid fa-angle-left" id="left"></i>
             <i class="fa-solid fa-angle-right" id="right"></i>
             <div class="dots">
-                <i class="fa-solid fa-circle"></i>
-                <i class="fa-solid fa-circle"></i>
-                <i class="fa-solid fa-circle"></i>
+                <i class="fa-solid fa-circle" id="bn1"></i>
+                <i class="fa-solid fa-circle" id="bn2"></i>
+                <i class="fa-solid fa-circle" id="bn3"></i>
             </div>
             <!-- <img src="/img/banner2.jpg" alt="banner"> -->
 
