Correcciones a errores de escritura

--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -69,7 +69,7 @@
         <h2>Mi carrito</h2>
         <article>
             <form action="/productCart" method="get" class="formulario-padre">
-                <section><p>Descripcion</p><p class="p-precio">Precio</p><p>Cantidad de productos</p></section>
+                <section><p>Descripción</p><p class="p-precio">Precio</p><p>Cantidad de productos</p></section>
                 <div class="productInfo">
                     <img src="/img/lenovo.jpg" alt="producto">
                     <p class="description">Laptop Lenovo</p>
