--- a/src/views/login.html
+++ b/src/views/login.html
@@ -75,7 +75,7 @@
             <!-- ingresa -->
             <div class="mover">
                 <form action="/login" method="post" class="form-login">
-                    <h5>Iniciar Sesión con mi mail</h5>
+                    <h5>Iniciar sesión con mi email</h5>
                     <!--<input class="cajita" type="checkbox" name="" value="">  -->
                     <input class="controls" type="text" style="color: rgb(255, 255, 255) ;" name="usuario" value=""
                         placeholder="Usuario" required minlength="3">
@@ -83,7 +83,7 @@
                         value="" placeholder="Contraseña" autocomplete="current-password" required minlength="3">
                         <div class="texto-login">
                     <a class="registrarme" ; padding: 6px;; href="/register"> Registrame</a>
-                    <a class="contraseña" ; href="#"> ¿Olvidastes tu Contraseña?</a>
+                    <a class="contraseña" ; href="#"> ¿Olvidaste tu Contraseña?</a>
                 </div>
                     <div class="button-container">
                         <a style="text-decoration: none;" href="/index"><button type="submit"
