se cambia icono de whatsapp del footer por facebook

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -179,7 +179,7 @@
                     <h3 class="texto-redes">¡Seguinos en nuestras redes sociales!</h3>
                 </div>
                 <div class="iconos">
-                    <i class="fab fa-whatsapp"></i>
+                    <i class="fa-brands fa-facebook"></i>
                     <i class="fab fa-instagram"></i>
                     <i class="fab fa-twitter"></i>
                 </div>
